# lims

./: .env.example  .gitignore  .pre-commit-config.yaml  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MIGRATION_LOG.md  Makefile  README.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt  test.db  test_results.db  test_voice.db
backend/app/: database.py  main.py
backend/app/models/: patient.py  test_result.py  voice_event.py
backend/app/routers/: patients.py  results.py  voice.py
backend/app/services/: qc_rules.py  voice_mapping.py
backend/src/lims/: database.py  main.py
backend/src/lims/models/: patient.py  test_result.py  voice_event.py
backend/src/lims/routers/: health.py  patients.py  results.py  voice.py
backend/src/lims/services/: qc_rules.py  voice_mapping.py
backend/tests/: test_health.py  test_patients.py  test_qc_rules.py  test_results_api.py  test_voice_api.py  test_voice_mapping.py
data/: README.md
docs/: AI_DEV_GUIDE.md  CODING_STANDARDS.md  CONTRIBUTING.md  OpenAPI.md  STAGE_PLAN.md  Setup.md  VOICE_SPEC.md
frontend/: .env.example  .prettierignore  Dockerfile  next.config.js  package-lock.json  package.json
frontend/components/: VoiceInput.tsx
frontend/pages/: index.tsx
frontend/pages/patients/: index.tsx
frontend/src/components/: VoiceInput.tsx
frontend/src/pages/: index.tsx  voice-registration.tsx
frontend/src/pages/patients/: index.tsx
lims-content/: critical_values.csv  delta_rules.csv  reference_ranges.csv
